@@ -19,7 +19,7 @@ The default prefix is /usr, so files are put in /usr/bin,
 
 REQUIREMENTS:
 
- * Python v2.3 or later
+ * Python v2.4 or later
  * librsync v0.9.6 or later
  * GnuPG v1.x for encryption
  * for normal ftp -- NcFTP version 3.1.9 or later, but not 3.2.0
